test: use List.of in AbstractGitMojoTest
Agent-Logs-Url: https://github.com/hazendaz/makeself-maven-plugin/sessions/69939c26-b62e-4653-a0c6-f9be09549992

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>